--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/todo?useSSL=false&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/todo?allowPublicKeyRetrieval=true&useSSL=false&serverTimeZone=UTC
 spring.datasource.username=todo
 spring.datasource.password=todo
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
