--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -3,10 +3,10 @@ name: Maven Test
 on:
   push:
     branches:
-      - "master"
+      - master
   pull_request:
     branches:
-      - "master"
+      - master
 
 jobs:
   build:
@@ -21,6 +21,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: 17
+        distribution: 'adopt'
 
     - name: Build and Test with Maven
       run: mvn clean test
